--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Stats Tracker</title>
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
@@ -59,6 +58,10 @@
         {% endif %}
         <h2>Hello, {{ user_name }}!</h2>  
         <p class="lead">Here are your stats for the today:</p>
+        <div style="margin-bottom: 100px;"></div>
+
+    
+        
     </div>
         <div class="row">
             <div class="col-lg-4 mb-3">
@@ -106,7 +109,7 @@
             <script>
                 var ctx = document.getElementById('genresChart').getContext('2d');
                 var genresChart = new Chart(ctx, {
-                    type: 'bar',  // or 'pie', 'doughnut', etc.
+                    type: 'bar',  
                     data: {
                         labels: {{ genres_listened | tojson | safe }},
                         datasets: [{
@@ -139,8 +142,6 @@
             &copy; {{ current_year }} Spotify Stats Tracker - All Rights Reserved
         </div>
     </footer>
-
-    <!-- Bootstrap JS, Popper.js, and jQuery -->
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
